name:                crossword-helper-servant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jmorag/crossword-helper-servant#readme
license:             BSD3
license-file:        LICENSE
author:              Joseph Morag
maintainer:          joseph.morag@columbia.edu
copyright:           2018 Joseph Morag
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Dictionary
                     , Helper
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , lucid
                     , servant-lucid
                     , file-embed
                     , unordered-containers
                     , bytestring
                     , string-conversions
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings,
                       TypeOperators,
                       DataKinds,
                       DeriveGeneric

executable crossword-helper-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , crossword-helper-servant
  default-language:    Haskell2010

test-suite crossword-helper-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crossword-helper-servant
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jmorag/crossword-helper-servant
